--- a/tasklib/src/boot_bowdlerize/bower.mustache
+++ b/tasklib/src/boot_bowdlerize/bower.mustache
@@ -1,7 +1,7 @@
 (ns {{config-ns}})
 
-{{#config}}
+{{#vars}}
 (def {{name}} {:uri "{{uri}}"{{#polymer}} :kw {{kw}} :type :polymer{{/polymer}}
      {{#css}} :type :css{{/css}}{{#js}} :type :js{{/js}}{{#html}} :type :html{{/html}}})
 
-{{/config}}
+{{/vars}}
